# lvgl_espidf_template

./: README.md
components/lcd/: CMakeLists.txt  lcd.c  lcd.h  lcd_init.c  lcd_init.h
components/lvgl/: CMakeLists.txt  lv_conf.h
components/lvgl/demos/music/: lv_demo_music.c
components/lvgl/lvgl_driver/: lv_port_disp.c  lv_port_disp.h
main/: CMakeLists.txt  blink_example_main.c  main.c
